--- a/Hoteleria.html
+++ b/Hoteleria.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOTELERIA</title>
-    <link rel="stylesheet" href="pagina.css" > 
+    <link rel="stylesheet" href="PAGINA.CSS" > 
     
 </head>
 <body>   
@@ -124,4 +124,5 @@
     </div>
 </section>
 </body>
+
 </html>
