--- a/gastronomia.html
+++ b/gastronomia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gastronomia  </title>
-    <link rel="stylesheet" href="pagina.css" > 
+    <link rel="stylesheet" href="PAGINA.CSS" > 
 </head>
 <body>
     <section id="gastronomia" class="gastronomia-section section-pattern">
