--- a/INDEX.html
+++ b/INDEX.html
@@ -201,19 +201,19 @@
 
         <div class="estudiantes">
             <div class="card-estudiantes">
-                <img src="img.jpg" alt="Estudiante 1">
+                <img src="Sayoha.jpg" alt="Estudiante 1">
                 <h4>Jimenez Espinar Sayoha Anahí</h4>
                 <span>Estudiante</span>
             </div>
 
             <div class="card-estudiantes">
-                <img src="img/estudiante2.jpg" alt="Estudiante 2">
+                <img src="Alejandro.jpg" alt="Estudiante 2">
                 <h4>Morán Asanza Edgar Alejandro</h4>
                 <span>Estudiante</span>
             </div>
 
             <div class="card-estudiantes">
-                <img src="img/estudiante3.jpg" alt="Estudiante 3">
+                <img src="Paulette.jpg" alt="Estudiante 3">
                 <h4>Reyes Camacho Juleisy Paulette</h4>
                 <span>Estudiante</span>
             </div>
